updated the html

--- a/LiveMessage.html
+++ b/LiveMessage.html
@@ -16,6 +16,7 @@
 </head>
 
 <body >
+<h1>This is live Messaging service</h1>
 <div id = "foobar">
   <strong>Message:</strong> <input id="update-text" type="input" placeholder="enter some text"/>
   <input id="publish-button" type="submit" value="Submit"/>
