removed my keys

--- a/LiveMessage.html
+++ b/LiveMessage.html
@@ -39,8 +39,8 @@
 
   const pubnub = new PubNub({
 
-    publishKey: 'pub-c-e7d52b42-3674-4dac-8497-eaf6d2f961a0',
-    subscribeKey: 'sub-c-e042d526-f3ec-11ea-a5ac-ca9fd24ed40e',
+    publishKey: 'put your key here',
+    subscribeKey: 'put your key here,
     uuid: clientUUID
   });
 
